Changed NMAE_mm metric and % in plots and text

--- a/results/plots/havok_vs_dmd_q_2mps.tex
+++ b/results/plots/havok_vs_dmd_q_2mps.tex
@@ -3,7 +3,7 @@
     \begin{tikzpicture}
         \begin{axis}[            
             xlabel = {Number of delay-coordinates, $q$},
-            ylabel = $\overline{NMAE}_{mm}$ \phantom{~},
+            ylabel = $\overline{NMAE}$ \phantom{~},
             % x unit = \si{\second},
             y unit = \%,
             xmin = 5,     xmax = 80,
