--- a/system_id/plant.tex
+++ b/system_id/plant.tex
@@ -57,7 +57,7 @@
 
     % From this derivation it is clear that the angular velocity of the payload, $\dot{\theta}$, is required to described the system dynamics.
     % However, $\dot{\theta}$ is not measured directly on the considered practical quadrotor setup.
-    % Instead, the payload angle, $\theta$, is measured by a potentiometer attached to a ADC on Honeybee as described in Chapter \ref{chap:system_overview}.
+    % Instead, the payload angle, $\theta$, is measured by a potentiometer attached to a ADC on Honeybee as described in Chapter \ref{chap:exp_design}.
     % As expected, this measurement is extremely noisy.
     % \murray{Maybe insert figure to show noise}
     % % Figure \ref{} shows the angle measurement during a practical experiment of the payload while Honeybee is held stationary
