--- a/modelling/modelling.tex
+++ b/modelling/modelling.tex
@@ -20,5 +20,13 @@ This 3D mathematical model will be used in a nonlinear simulation of a quadrotor
 \section{Discretised model}
 \section{Model verification}
 \section{Dynamic payloads}
-water looks like double payload
+\begin{itemize}
+    \item Most control in literature model payload as rigid Mass. Give references.
+    \item Some add spring stiffness of cable (give references e.g. QuadLoad ElasticCable Prasanth Kotaru)
+    \item but not practical because can design which cable you used. Cannot design which payload needs to be transported
+    \item water looks like double payload
+\end{itemize}
+% https://hybrid-robotics.berkeley.edu/publications/ACC2017_QuadLoad_ElasticCable.pdf), 
+
+
 
