--- a/results/plots/wind_Ttrain.tex
+++ b/results/plots/wind_Ttrain.tex
@@ -3,7 +3,7 @@
     \begin{tikzpicture}
         \begin{axis}[            
             xlabel = Length of training data,
-            ylabel = $\overline{NMAE}_{mm}$ \phantom{~},
+            ylabel = $\overline{NMAE}$ \phantom{~},
             x unit = \si{\second},
             y unit = \%,
             xmin = 5,     xmax = 120,
