--- a/stellenbosch_ee_report.tex
+++ b/stellenbosch_ee_report.tex
@@ -183,10 +183,10 @@
 % Contents
 \input{introduction/introduction.tex}
 \input{lit_study/lit_study.tex}
-\input{system_overview/system_overview.tex}
 \input{modelling/modelling.tex}
 \input{system_id/system_id.tex}
 \input{control_systems/control_systems.tex}
+\input{exp_design/exp_design.tex}
 \input{results/results.tex}
 \input{conclusion/conclusion.tex}
 
