--- a/system_id/plots/MAE_vs_Ts_vs_L.tex
+++ b/system_id/plots/MAE_vs_Ts_vs_L.tex
@@ -3,11 +3,11 @@
     \begin{tikzpicture}
         \begin{axis}[            
             xlabel = Ts,
-            ylabel = NMAE\textsubscript{mm},
+            ylabel = $\overline{NMAE}$ \phantom{~},
             % x unit = \si{\second},
-            % y unit = \si{\second},
-            xmin = 0.02,  xmax = 0.05,
-            ymin = 0.03,  ymax = 0.055,
+            y unit = \%,
+            xmin = 2,  xmax = 5,
+            ymin = 3,  ymax = 5.5,
             grid = major,
             legend cell align = left,
             legend pos = north east,
@@ -26,22 +26,22 @@
         ]
 
         % \addplot+[mark = none, style = solid, ultra thick] 
-        % table[x = Ts, y = NMAE_mean, col sep = comma] 
+        % table[x = Ts, y expr = {\thisrow{NMAE_mean}*100}, col sep = comma] 
         % {system_id/csv/NMAE_vs_Ts_SITL_x_vel_noise_l0-25_m0-2.csv_dmd_angle.csv};
         % \addlegendentry{$l =$~\SI{0.25}{\metre}}
         
         \addplot+[mark = none, style = solid, ultra thick] 
-        table[x = Ts, y = NMAE_mean, col sep = comma] 
+        table[x = Ts, y expr = {\thisrow{NMAE_mean}*100}, col sep = comma] 
         {system_id/csv/NMAE_vs_Ts_SITL_x_vel_noise_l0-5_m0-2.csv_dmd_angle.csv};
         \addlegendentry{$l =$~\SI{0.5}{\metre}}
         
         \addplot+[mark = none, style = solid, ultra thick] 
-        table[x = Ts, y = NMAE_mean, col sep = comma] 
+        table[x = Ts, y expr = {\thisrow{NMAE_mean}*100}, col sep = comma] 
         {system_id/csv/NMAE_vs_Ts_SITL_x_vel_noise_l1_m0-2.csv_dmd_angle.csv};
         \addlegendentry{$l =$~\SI{1}{\metre}}
         
         \addplot+[mark = none, style = solid, ultra thick] 
-        table[x = Ts, y = NMAE_mean, col sep = comma] 
+        table[x = Ts, y expr = {\thisrow{NMAE_mean}*100}, col sep = comma] 
         {system_id/csv/NMAE_vs_Ts_SITL_x_vel_noise_l2_m0-2.csv_dmd_angle.csv};
         \addlegendentry{$l =$~\SI{2}{\metre}}
         
