--- a/system_id/plots/MAE_vs_q.tex
+++ b/system_id/plots/MAE_vs_q.tex
@@ -3,11 +3,11 @@
     \begin{tikzpicture}
         \begin{axis}[            
             xlabel = {Number of delay-coordinates, $q$},
-            ylabel = NMAE\textsubscript{mm},
+            ylabel = $\overline{NMAE}$ \phantom{~},
             % x unit = \si{\second},
-            % y unit = \si{\second},
+            y unit = \%,
             xmin = 2,     xmax = 40,
-            ymin = 0.032,  ymax = 0.065,
+            ymin = 3.2,  ymax = 6.5,
             grid = major,
             legend cell align = left,
             legend pos = north east,
@@ -26,12 +26,12 @@
         ]
 
         \addplot+[mark = none, style = solid, ultra thick] 
-        table[x = q, y = NMAE_mean, col sep = comma] 
+        table[x = q, y expr = {\thisrow{NMAE_mean}*100}, col sep = comma] 
         {system_id/csv/NMAE_vs_q_SITL_x_vel_noise_longer_times_q.csv_dmd_angle_Ttrain_60.csv};
         \addlegendentry{DMD}
         
         \addplot+[mark = none, style = solid, ultra thick] 
-        table[x = q, y = NMAE_mean, col sep = comma] 
+        table[x = q, y expr = {\thisrow{NMAE_mean}*100}, col sep = comma] 
         {system_id/csv/NMAE_vs_q_SITL_x_vel_noise_longer_times_q.csv_havok_angle_Ttrain_60.csv};
         \addlegendentry{HAVOK}
 
