--- a/system_id/plots/different_masses.tex
+++ b/system_id/plots/different_masses.tex
@@ -3,11 +3,11 @@
     \begin{tikzpicture}
         \begin{axis}[            
             xlabel = Length of training data,
-            ylabel = NMAE\textsubscript{mm},
+            ylabel = $\overline{NMAE}$ \phantom{~},
             x unit = \si{\second},
-            % y unit = \si{\second},
+            y unit = \%,
             xmin = 0,     xmax = 120,
-            ymin = 0.03,  ymax = 0.055,
+            ymin = 3,  ymax = 5.5,
             grid = major,
             legend cell align = left,
             legend pos = north east,
@@ -26,17 +26,17 @@
         ]
          
         \addplot+[mark = none, style = solid, ultra thick] 
-        table[x = T_train, y = NMAE_mean, col sep = comma] 
+        table[x = T_train, y expr = {\thisrow{NMAE_mean}*100}, col sep = comma] 
         {system_id/csv/NMAE_vs_Ntrain_SITL_x_vel_noise_l1_m0-1.csv_havok_angle.csv};
         \addlegendentry{$m =$~\SI{0.1}{\kilo\gram}}
         
         \addplot+[mark = none, style = solid, ultra thick] 
-        table[x = T_train, y = NMAE_mean, col sep = comma] 
+        table[x = T_train, y expr = {\thisrow{NMAE_mean}*100}, col sep = comma] 
         {system_id/csv/NMAE_vs_Ntrain_SITL_x_vel_noise_l1_m0-2.csv_havok_angle.csv};
         \addlegendentry{$m =$~\SI{0.2}{\kilo\gram}}
         
         \addplot+[mark = none, style = solid, ultra thick] 
-        table[x = T_train, y = NMAE_mean, col sep = comma] 
+        table[x = T_train, y expr = {\thisrow{NMAE_mean}*100}, col sep = comma] 
         {system_id/csv/NMAE_vs_Ntrain_SITL_x_vel_noise_l1_m0-3.csv_havok_angle.csv};
         \addlegendentry{$m =$~\SI{0.3}{\kilo\gram}} 
         
