--- a/stellenbosch_ee_report.tex
+++ b/stellenbosch_ee_report.tex
@@ -93,6 +93,7 @@
 \renewcommand{\tabularxcolumn}[1]{m{#1}}
 \newcolumntype{C}{>{\centering\arraybackslash}X}
 \newcolumntype{L}{>{\raggedright\arraybackslash}X}
+\setlength{\tabcolsep}{12pt}
 
 % Header and footer
 \usepackage{fancyhdr}
