Fixed double pend captions parameters in system_id

--- a/results/results.tex
+++ b/results/results.tex
@@ -119,7 +119,9 @@
         \FloatBarrier\subsection{Single pendulum}
 
             \begin{itemize}
-                \item plot MPC vs LQR v PID (no wind)
+                \item subplot prediction of data driven model. subplot prediction of white-box model
+                \item plot MPC vs LQR v PID (no wind) step = 1 m/s
+                \item plot MPC vs LQR v PID (no wind) step = 2 m/s
                 \item plot DMDc vs HAVOK (DMD - Havok)
                 \item plot with wind disturbacne control
             \end{itemize}
@@ -127,8 +129,9 @@
         \FloatBarrier\subsection{Double pendulum}
 
             \begin{itemize}
+                \item subplot prediction of data driven model. subplot prediction of white-box model
                 \item plot MPC vs LQR v PID (no wind)
-                \item plot with wind disturbacne control
+                \item plot DMDc vs HAVOK (DMD - Havok)
             \end{itemize}
 
     \section{HIL}
