--- a/system_id/plots/FFT_subfigs.tex
+++ b/system_id/plots/FFT_subfigs.tex
@@ -4,7 +4,6 @@
     \centering
     \input{system_id/plots/FFT_single_pend.tex} % subfigure
     \input{system_id/plots/FFT_double_pend.tex} % subfigure
-    \caption{ The single-sided amplitude spectrum of the swing angle FFT 
-    ($m =$~\SI{0.3}{\kilo\gram}, $l =$~\SI{1}{\meter}).}
+    \caption{ The single-sided amplitude spectrum of the swing angle FFT.}
     \label{fig:FFT_subfigs}  
 \end{figure}
