--- a/system_id/plots/prediction_double_pend_white.tex
+++ b/system_id/plots/prediction_double_pend_white.tex
@@ -49,6 +49,6 @@
     \end{tikzpicture} 
     
     \caption{White-box model predictions of a double pendulum for a North velocity step input
-        ($m =$~\SI{0.3}{\kilo\gram}, $l =$~\SI{1}{\meter})}
+    ($m_1 =$~\SI{0.2}{\kilo\gram}, $l_1 =$~\SI{1}{\meter}, $m_2 =$~\SI{0.1}{\kilo\gram}, $l_2 =$~\SI{0.3}{\meter})}
     \label{fig:prediction_double_pend_white}
 \end{figure}
