--- a/system_id/implementation.tex
+++ b/system_id/implementation.tex
@@ -485,7 +485,7 @@
         The prediction error curves of the two methods are very simlar, with HAVOK producing slightly lower prediction errors than DMDc.
         However, this difference in error may be so small that it has a negligible effect on control.  
 
-    \subsection{System parameters}
+    \subsection{System parameters} \label{sec:system_params}
             
         \paragraph
         The suspended payload, as described in Section~\ref{sec:plant_considered},
